<resources>
    <string name="app_name">LokaFresh Inventory</string>
    <string name="title_home">Home</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_lokatani">Logo Lokatani</string>
    <string name="lokatani">Lokatani</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don’t have an account yet?</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="history">History</string>
    <string name="analysis">Analysis</string>
    <string name="weight">Weight:</string>
    <string name="click_to_capture">Capture Photo</string>
    <string name="vegetable_type">Veggie Type:</string>
    <string name="camera_hint">Press Camera button if prediction is correct</string>
    <string name="inference_time">Inference Time</string>
    <string name="scan">Scan</string>
    <string name="settings">Settings</string>
    <string name="scan_result">SCAN RESULT</string>
    <string name="save">SAVE</string>
    <string name="no_data">No data</string>
    <string name="guest">Guest</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="placeholder">Placeholder</string>
    <string name="prediction_kale">%1$d KG</string>
    <string name="prediction_bayam_merah">%1$d KG</string>
    <string name="select_prediction_date">Select Prediction Date</string>
    <string name="select_date">Select Date</string>
    <string name="quantity_prediction">Quantity Prediction</string>
    <string name="kale">Kale</string>
    <string name="empty">-</string>
    <string name="bayam_merah">Bayam Merah</string>
    <string name="total">---</string>
    <string name="total_prediction">Total Prediction</string>
    <string name="error_occured">Error Occurred</string>
    <string name="bot_message">Bot Message</string>
    <string name="user_message">User Message</string>
    <string name="chats">Chats</string>
    <string name="ask">Ask Chatbot</string>
    <string name="send_chat">Send Chat</string>
    <string name="time_placeholder">00:00</string>
    <string name="gram">%1$s gram</string>
    <string name="kg">%1$d KG</string>
    <string name="export_data">Export Data</string>
    <string name="date">Date:</string>
    <string name="cpu">CPU</string>
    <string name="gpu">GPU</string>
    <string name="processing_detection">Processing Detection</string>
    <string name="ms">%1$dms</string>
    <string name="sort_data">Sort Data</string>
    <string name="no">No</string>
    <string name="no_chart_data_avalaible">No Chart Data Avalaible</string>
    <string name="summary">Summary</string>
    <string name="ask_ai">Ask Ai</string>
    <string name="scan_vegetable">Scan Vegetable</string>
    <string name="profile">Profile</string>
    <string name="create_account">Create Account</string>
    <string name="monthly_data_entry">Monthly Data Entry</string>
    <string name="bayam_merah_weight">Bayam Merah Weight</string>
    <string name="kale_weight">Kale Weight</string>
    <string name="signing_in">Signing In</string>
    <string name="registering_account">Registering Account</string>
    <string name="export_notification_channel_name">File Exports</string>
    <string name="export_notification_channel_description">Notifications for completed file exports</string>
    <string name="export_complete_title">File Export Complete</string>
    <string name="export_complete_text">%1$s saved</string>
    <string name="csv_export_failed">CSV export failed</string>
    <string name="filter">Filter</string>
    <string name="filter_table">Filter Table</string>
    <string name="user">User</string>
    <string name="vegetable">Vegetable</string>
    <string name="weight_range">Weight Range</string>
    <string name="weight_range_value">%1$dg - %2$dg</string>
    <string name="last_input">Last Input</string>
    <string name="no_recent_input">No recent input</string>
    <string name="pick_date_to_filter">Pick Date to Filter</string>
    <string name="range_item_value">%1$s - %2$s</string>
    <string name="loading_data">Loading Data…</string>
    <string name="chatbot_opening">Ask me about anything related to LokaFresh Inventory Database . Click the Help Button (?) above for examples</string>
    <string name="welcome_to_chatbot">Welcome to Chatbot</string>
    <string name="chatbot_help_message">Here you can ask questions about your inventory in plain language. You can ask for summaries, totals, or data from specific users and dates</string>
    <string name="example_tooltip">Below are some example of question you can ask:</string>
    <string name="input_state_for_the_last_month">Bagaimana perkembangan input sayuran selama satu bulan terakhir?</string>
    <string name="total_input_by_x_user">Berapa jumlah input Bayam Merah oleh user WH3 pada tanggal 1 Januari 2025?</string>
    <string name="help">Help</string>
    <string name="chatbot">Chatbot</string>
    <string name="last_input_data">%1$s: %2$s gram (%3$s)</string>
    <string name="error_check_your_connection_or_try_again">Error. Check your connection or try again</string>
    <string name="prediction_analysis">Prediction Analysis</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="please_fill_your_email">Please fill your email</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="history_data">History Data</string>
    <string name="no_data_matches_the_current_filters_to_export">No data matches the current filters to export</string>
    <string name="no_data_available_to_export">No data available to export</string>
    <string name="no_header_data_to_export">No header data to export</string>
    <string name="data_has_not_been_loaded_yet">Data has not been loaded yet.</string>
    <string name="data_exported_check_notification">Data exported. Check notification.</string>
    <string name="please_grant_notification_permission_to_see_export_status">Please grant notification permission to see export status.</string>
    <string name="loading">Loading</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="error_analysing_data">Error Analysing Data</string>
    <string name="chat_message">chat_message</string>
    <string name="text_copied">Text copied to Clipboard</string>
    <string name="model_not_contains_metadata_provide_labels_path_in_constants_kt">Model not contains metadata, provide LABELS_PATH in Constants.kt</string>
    <string name="all">All</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="file_saving_cancelled">File saving cancelled</string>
    <string name="notification_permission_granted_future_exports_will_notify">Notification permission granted. Future exports will notify.</string>
    <string name="notification_permission_denied_please_grant_notification_permission_to_see_export_status">Notification permission denied. Please grant notification permission to see export status.</string>
    <string name="error_message">Error: %1$s</string>
    <string name="error_loading_chart_data">Error loading chart data: %1$s</string>
    <string name="unknown_date">Unknown Date</string>
    <string name="veg_weight">%1$s Weight</string>
    <string name="login_successful">Login Successful</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="register_success">Register Success</string>
    <string name="are_you_sure_to_logout">Are you sure to Logout?</string>
    <string name="account_logged_out">Account Logged Out</string>
    <string name="change_language">Change Language</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_analysis">Welcome to Analysis</string>
    <string name="this_is_a_data_mining_analysis_to_help_you_predict_a_required_stock_of_vegetables_on_a_spesific_date">This is a Data Mining analysis to help you predict a required stock of vegetables on a spesific date</string>
    <string name="to_use_it_simply_click_on_select_date_and_choose_a_date_to_predict">To use it, simply click on \'Select Date\' and choose a date to predict</string>
    <string name="no_vegetable">No Vegetable</string>
    <string name="guest_gmail_com">guest@gmail.com</string>
    <string name="password_must_have_at_least_6_characters">Password must have at least 6 characters</string>
    <string name="please_fill_your_password">Please fill your password</string>
    <string name="username_must_have_at_least_3_characters">Username must have at least 3 characters</string>
    <string name="please_make_a_username">Make a username</string>
    <string name="fill_your_email_to_register">Fill your email to register</string>
    <string name="make_a_strong_password">Make a strong password</string>
</resources>