<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lokatani.lokafreshinventory.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.lokatani.lokafreshinventory.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_analysis"
        android:name="com.lokatani.lokafreshinventory.ui.analysis.AnalysisFragment"
        android:label="@string/analysis"
        tools:layout="@layout/fragment_analysis" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.lokatani.lokafreshinventory.ui.settings.SettingsFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_settings" />
</navigation>