<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="24dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_auto_graph_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/welcome_to_analysis"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:justificationMode="inter_word"
        android:text="@string/this_is_a_data_mining_analysis_to_help_you_predict_a_required_stock_of_vegetables_on_a_spesific_date"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/to_use_it_simply_click_on_select_date_and_choose_a_date_to_predict"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

</LinearLayout>