<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:contentDescription="@string/logo_lokatani"
                android:src="@drawable/logo_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lokatani"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="@color/white"
                app:shapeAppearanceOverlay="@style/TopCornerChange">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="24dp"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="12dp"
                        android:hint="@string/email"
                        android:maxWidth="488dp"
                        android:minWidth="320dp"
                        app:boxStrokeColor="@color/theme_green"
                        app:cursorColor="@color/theme_green"
                        app:hintTextColor="@color/theme_green"
                        app:startIconDrawable="@drawable/outline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:inputType="textEmailAddress" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="24dp"
                        android:hint="@string/password"
                        android:maxWidth="488dp"
                        android:minWidth="320dp"
                        app:boxStrokeColor="@color/theme_green"
                        app:cursorColor="@color/theme_green"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/theme_green"
                        app:startIconDrawable="@drawable/baseline_lock_outline_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/button_state_color_state"
                        android:maxWidth="320dp"
                        android:minWidth="320dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/white"
                        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_register_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_have_an_account" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_register"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:minWidth="0dp"
                            android:minHeight="0dp"
                            android:paddingTop="4dp"
                            android:text="@string/sign_up"
                            android:textColor="@color/dark_green"
                            android:textSize="14sp"
                            app:rippleColor="@color/light_green" />

                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/progress_overlay_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A0000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/progress_display_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/pale_green"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progress_bar_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:indeterminate="true"
                    android:indeterminateBehavior="repeat"
                    app:indicatorColor="@color/theme_green" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/signing_in"
                    android:textSize="18sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>