<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingTop="12dp">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_user_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:longClickable="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/pale_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/UserChatBubble"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_user_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="true"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="24dp"
            android:text="@string/user_message"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_user_chat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:padding="4dp"
            android:text="@string/time_placeholder"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_bot_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:longClickable="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/light_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/BotChatBubble"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_bot_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:longClickable="true"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="28dp"
            android:text="@string/bot_message"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_bot_chat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:padding="4dp"
            android:text="@string/time_placeholder"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
